in process of fixing location section and remove the overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
 }
 
 body { 
@@ -16,7 +16,7 @@ body {
     font-weight: 400;
     font-style: normal;
     }
-      
+    overflow-x: hidden; 
 }
 
 
